bynkc/tests/fixtures/negative/389_nobody_needs_secured_route/src/shop/api.bynk
context shop.api

type Status = { ok: Bool }

-- A public route (guarded by the anonymous `Visitor` actor) has no auth seam,
-- so `by Nobody` — which tests the seam's 401 — is meaningless here (#706).
service api from http {
  on GET("/health") () -> Effect[HttpResult[Status]] by v: Visitor {
    Ok(Status { ok: true })
  }
}
